@@ -138,6 +138,8 @@
   "export_config_explanation" => "Please select the options for the CSV export.",
   "export_generatetitlerow" => "Include a title row",
   "export_selectcolumns" => "Select which columns to export",
+  "export_selections" => "Standard selections",
+  "export_selections_name => "Standard selections name",
   "feb" => "Feb",
   "february" => "February",
   "feedback" => "Feedback",
@@ -269,6 +271,7 @@
   "saveandedit" => "Save and edit",
   "saveandnext" => "Save and next",
   "save_criteria" => "Save search as",
+  "save_export_selection" => "Save selection",
   "search" => "Search",
   "search_all" => "Search all",
   "search_and" => "Match all criteria",
