@@ -138,6 +138,8 @@
   "export_config_explanation" => "Selecteer de opties voor de CSV export.",
   "export_generatetitlerow" => "Voeg een rij met kolom titels toe",
   "export_selectcolumns" => "Selecteer de kolommen die ge&euml;xporteerd worden",
+  "export_selections" => "Standaard selectie",
+  "export_selections_name" => "Standaard selectie naam",
   "feb" => "feb",
   "february" => "februari",
   "feedback" => "Bevestiging",
@@ -269,6 +271,7 @@
   "saveandedit" => "Opslaan en bewerken",
   "saveandnext" => "Opslaan en volgende",
   "save_criteria" => "Opslaan zoekopdracht als",
+  "save_export_selection" => "Selectie opslaan",
   "search" => "Zoeken",
   "search_all" => "Alles zoeken",
   "search_and" => "Alle criteria voldoen",
